--- a/src/main/resources/messages_pt_BR.properties
+++ b/src/main/resources/messages_pt_BR.properties
@@ -23,6 +23,8 @@ usuario.cadastrar.label=Cadastrar Usuário
 usuario.listar.label=Listar
 usuario.name.label=Nome Completo
 usuario.role.label=Perfil de Acesso
+usuario.username.label=Email
+usuario.password.label=Senha
 
 testador.chooseProject.title=Escolher Projeto
 testador.chooseProject.header=Criar Sessão: Selecione um Projeto
@@ -113,6 +115,7 @@ admin.card.manageStrategies.button=Gerenciar Estratégias
 admin.card.manageProjects.title=Gerenciamento de Projetos
 admin.card.manageProjects.text=Crie, edite e remova os projetos do sistema.
 admin.card.manageProjects.button=Gerenciar Projetos
+
 
 # Tester Project List
 tester.myProjects.title=Meus Projetos
